Document Increment 30: runtime bug fixes (config serving, auth, Gson/Java 25)
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>